# XdetectionCore

./: LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: publish.yml
XdetectionCore.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
analysis/: build_session_topology.py  dummy_ephys_pipeline.py  dummy_pupil_analysis.py  gen_ephys_test_data.py  readme.md
tests/: conftest.py  test_core.py  test_spike_utils.py
xdetectioncore/: __init__.py  behaviour.py  build_session_topology.py  io_utils.py  paths.py  plotting.py  session.py  stats.py
xdetectioncore/TimeSeries_clasification/: RNN_classifier.py  cluster_analysis.py
xdetectioncore/components/: events.py  licks.py  pupil.py  utils.py
xdetectioncore/decoding/: decoding_funcs.py
xdetectioncore/ephys/: __init__.py  aggregate_ephys_funcs.py  generate_synthetic_spikes.py  population_analysis_funcs.py  spike_time_utils.py  test_ephys_abstraction.py
xdetectioncore/pupil/: pupil_analysis_funcs.py
