[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "XdetectionCore" 
version = "0.1.7.4"
description = "Core ephys and behavior processing utilities for the Akrami Lab."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy<2.0",
    "pandas>=1.3",
    "matplotlib",
    "scipy",
    "tqdm",
    "joblib",
    "pytest",
    "scikit-learn",
    "pyyaml",
    
]
[project.optional-dependencies]
test = ["pytest"]
[tool.setuptools.packages.find]
where = ["."]